--- a/store/blocks/components/popular-picks.jsonc
+++ b/store/blocks/components/popular-picks.jsonc
@@ -37,7 +37,7 @@
   },
   "rich-text#popularTitle": {
     "props": {
-      "text": "### Produtos Populares",
+      "text": "### Popular Products",
       "textPosition": "CENTER",
       "blockClass": "popularTitle"
     }
