--- a/store/blocks/components/recommendations.jsonc
+++ b/store/blocks/components/recommendations.jsonc
@@ -37,7 +37,7 @@
   },
   "rich-text#recommendationsTitle": {
     "props": {
-      "text": "### Recomendados para Você",
+      "text": "### Recommended for You",
       "textPosition": "CENTER",
       "blockClass": "popularTitle"
     }
