--- a/store/blocks/minicart.jsonc
+++ b/store/blocks/minicart.jsonc
@@ -126,7 +126,7 @@
   },
   "link#quote": {
     "props": {
-      "label": "Criar uma cotação",
+      "label": "Create quote",
       "displayMode": "button",
       "blockClass": ["vtex-button", "order-quote"],
       "href": "/b2b-quotes/create"
@@ -181,7 +181,7 @@
 
   "rich-text#minicart-default-empty-state": {
     "props": {
-      "text": "Seu carrinho está vazio."
+      "text": "Cart is empty."
     }
   }
 }
