--- a/store/blocks/product/reviews-and-ratings.jsonc
+++ b/store/blocks/product/reviews-and-ratings.jsonc
@@ -53,7 +53,7 @@
   "rich-text#reviews-disclosure-trigger-heading": {
     "props": {
       "blockClass": ["reviews", "disclosure-trigger-heading"],
-      "text": "<span>Avaliações</span>",
+      "text": "<span>Reviews</span>",
       "font": "t-heading-5"
     }
   },
