--- a/store/blocks/product/specification.jsonc
+++ b/store/blocks/product/specification.jsonc
@@ -50,7 +50,7 @@
   "rich-text#specifications-disclosure-trigger-heading": {
     "props": {
       "blockClass": ["specifications", "disclosure-trigger-heading"],
-      "text": "<span>Especificações Técnicas</span>",
+      "text": "<span>Technical Specifications</span>",
       "font": "t-heading-5"
     }
   },
