fix(i18n): comprar => buy

--- a/store/blocks/product-summary.jsonc
+++ b/store/blocks/product-summary.jsonc
@@ -134,7 +134,7 @@
 
   "add-to-cart-button#product-summary-buy-button": {
     "props": {
-      "text": "Comprar",
+      "text": "Buy",
       "addToCartFeedback": "customEvent",
       "customPixelEventId": "add-to-cart-button"
     }
