--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,8 @@
     "vtex.quickorder": "3.x",
     "vtex.location-availability": "0.x",
     "vtex.shopper-location": "0.x",
-    "vtex.wordpress-integration": "2.x"
+    "vtex.wordpress-integration": "2.x",
+    "ssesandbox04.b2b-suite-bra": "1.x"
   },
   "dependencies": {
     "vtex.store": "2.x",
@@ -81,8 +82,7 @@
     "vtex.b2b-organizations": "1.x",
     "vtex.category-menu": "2.x",
     "vtex.overlay-layout": "0.x",
-    "vtex.storefront-permissions-ui": "1.x",
-    "ssesandbox04.b2b-suite-bra": "0.x"
+    "vtex.storefront-permissions-ui": "1.x"
   },
   "$schema": "https://raw.githubusercontent.com/vtex/node-vtex-api/master/gen/manifest.schema"
 }
